src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AGMT__Augment_ID__c</fullName>
        <label>Augment ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Model_Name__c</fullName>
        <label>Model Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Model_Thumbnail__c</fullName>
        <formula>IF(
ISBLANK(AGMT__Augment_ID__c),
IF(
ISBLANK( PricebookEntry.Product2.AGMT__Augment_ID__c) ,
&apos;&apos;,
IMAGE(PricebookEntry.Product2.AGMT__Thumbnail__c, &quot;Model Thumbnail&quot;, 100, 100)),
IMAGE(
IF(
ISBLANK(AGMT__Thumbnail__c), 
&apos;/resource/placeholder_thumbnail&apos;, 
AGMT__Thumbnail__c
),
 &quot;Model Thumbnail&quot;, 100, 100)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3D Model Thumbnail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Op_Augment_ID__c</fullName>
        <description>Used in Coca-Cola Package</description>
        <formula>IF(ISBLANK(AGMT__Augment_ID__c), IF(ISBLANK( PricebookEntry.Product2.AGMT__Augment_ID__c ),&quot;&quot;,PricebookEntry.Product2.AGMT__Augment_ID__c),AGMT__Augment_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Op Augment ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Op_Model_Name__c</fullName>
        <description>Used in SelectModelsController used in Coca-Cola package</description>
        <formula>IF(ISBLANK(AGMT__Model_Name__c), IF(ISBLANK( PricebookEntry.Product2.AGMT__Model_Name__c ),&quot;&quot;,PricebookEntry.Product2.AGMT__Model_Name__c),AGMT__Model_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3D Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGMT__Thumbnail__c</fullName>
        <description>Url for the thumbnail
Used in SelectModelsController used in Coca-Cola package</description>
        <label>Thumbnail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>